OES added menu seletion style - Manli

--- a/MerlionPortal/MerlionPortal-war/web/oes/allwaitinginvoice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/allwaitinginvoice.xhtml
@@ -56,7 +56,7 @@
                         <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
                     </c:if>
                     <c:if test="#{dashboardBean.checkOESCanGenerateSO()||dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:menuitem value="Confirm Payment" url="allwaitinginvoice.xhtml" />                           
+                        <p:menuitem value="Confirm Payment" url="allwaitinginvoice.xhtml" style="background:#aa5050; color:white" />                           
                     </c:if>
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
@@ -64,7 +64,7 @@
                         <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                     </p:submenu>
                 </c:if>
-                
+
             </p:menu>
         </ui:define>
 
