--- a/MerlionPortal/MerlionPortal-war/web/oes/displayallproducts.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayallproducts.xhtml
@@ -26,7 +26,7 @@
                     <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
                 </p:submenu>
                 <p:submenu label="Product" styleClass="display:block">
-                    <p:menuitem value="Products" url="displayallproducts.xhtml" />
+                    <p:menuitem value="Products" url="displayallproducts.xhtml" style="background:#aa5050; color:white" />
                 </p:submenu>
 
                 <p:submenu label="Quotation" styleClass="display:block">
