--- a/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/oesindexpage.xhtml
@@ -23,7 +23,7 @@
         <ui:define name="left">
             <p:menu styleClass="menu-width">
                 <p:submenu label="Home" styleClass="display:block">
-                    <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
+                    <p:menuitem value="OES Home" url="oesindexpage.xhtml" style="background:#aa5050; color:white" />
                 </p:submenu>
                 <p:submenu label="Product" styleClass="display:block">
                     <p:menuitem value="Products" url="displayallproducts.xhtml" />
