--- a/MerlionPortal/MerlionPortal-war/web/oes/orderswaitingforinvoice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/orderswaitingforinvoice.xhtml
@@ -44,7 +44,7 @@
                         </c:if>
                         <c:if test="#{dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
                             <p:menuitem value="Reject Order" url="returnorder.xhtml" />
-                            <p:menuitem value="Generate Invoice" url="orderswaitingforinvoice.xhtml" />
+                            <p:menuitem value="Generate Invoice" url="orderswaitingforinvoice.xhtml" style="background:#aa5050; color:white" />
 
                         </c:if>
                     </p:submenu>
