--- a/MerlionPortal/MerlionPortal-war/web/oes/allinvoice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/allinvoice.xhtml
@@ -51,7 +51,7 @@
                     </p:submenu>
                 </c:if>
                 <p:submenu label="Payment" styleClass="display:block">
-                    <p:menuitem value="All invoice" url="allinvoice.xhtml" />
+                    <p:menuitem value="All invoice" url="allinvoice.xhtml" style="background:#aa5050; color:white" />
                     <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
                     </c:if>
@@ -64,7 +64,7 @@
                         <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                     </p:submenu>
                 </c:if>
-                
+
             </p:menu>
         </ui:define>
 
