--- a/MerlionPortal/MerlionPortal-war/web/oes/displayallquotations.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayallquotations.xhtml
@@ -31,7 +31,7 @@
 
                 <p:submenu label="Quotation" styleClass="display:block">
                     <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
-                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
+                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" style="background:#aa5050; color:white" />
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Orders" styleClass="display:block">
