--- a/MerlionPortal/MerlionPortal-war/web/oes/recordpayment.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/recordpayment.xhtml
@@ -53,7 +53,7 @@
                 <p:submenu label="Payment" styleClass="display:block">
                     <p:menuitem value="All invoice" url="allinvoice.xhtml" />
                     <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.loginedUser.userType == 'superuser'}">
-                        <p:menuitem value="All unapid Orders" url="makepayment.xhtml" />                           
+                        <p:menuitem value="All unapid Orders" url="makepayment.xhtml" style="background:#aa5050; color:white" />                           
                     </c:if>
                     <c:if test="#{dashboardBean.checkOESCanGenerateSO()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:menuitem value="Confirm Payment" url="allwaitinginvoice.xhtml" />                           
