--- a/MerlionPortal/MerlionPortal-war/web/oes/reportdisplaysalessum.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/reportdisplaysalessum.xhtml
@@ -61,7 +61,7 @@
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkOESCanGenerateSalesReport()||dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Reports" styleClass="display:block">
-                        <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
+                        <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" style="background:#aa5050; color:white" />
                     </p:submenu>
                 </c:if>
                 
