--- a/MerlionPortal/MerlionPortal-war/web/oes/requestforreturn.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/requestforreturn.xhtml
@@ -77,7 +77,7 @@
                 <p:panel header="Reject Purchase Order" style="margin-bottom:10px;">
                     <h:panelGrid columns="2" cellpadding="5">
                         <p:outputLabel for="Reason" value="Reject Reson " />
-                        <p:selectOneMenu id="reson" value="#{salesOrderManagedBean.reason}" style="width:150px">
+                        <p:selectOneMenu id="reson" value="#{salesOrderManagedBean.rejectReason}" style="width:150px">
                             <f:selectItem itemLabel="Select Reject Reson" itemValue="" noSelectionOption="true" />
                             <f:selectItems value="#{salesOrderManagedBean.rejectReasons}" />
                         </p:selectOneMenu>
