--- a/MerlionPortal/MerlionPortal-war/web/oes/viewquotationinfor.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/viewquotationinfor.xhtml
@@ -31,7 +31,7 @@
 
                 <p:submenu label="Quotation" styleClass="display:block">
                     <p:menuitem value="View All Request" url="viewallrequests.xhtml" />
-                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" />
+                    <p:menuitem value="View Quotation" url="displayallquotations.xhtml" style="background:#aa5050; color:white" />
                 </p:submenu>
                 <c:if test="#{dashboardBean.checkOESCanGeneratePO()||dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Orders" styleClass="display:block">
@@ -64,18 +64,18 @@
                         <p:menuitem value="Sales Reports" url="reportdashboard.xhtml" />
                     </p:submenu>
                 </c:if>
-                
+
             </p:menu>
         </ui:define>
 
         <ui:define name="right">
             <h:form>
-                 <p:breadCrumb>
+                <p:breadCrumb>
                     <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
                     <p:menuitem value="All Quotations" url="displayallquotations.xhtml" /> 
                     <p:menuitem value="Quotation Detail" url="viewquotationinfor.xhtml" />
                 </p:breadCrumb>
-                
+
                 <p:fieldset legend="Customer Information" style="margin-bottom:20px">
                     <h:panelGrid columns="2" cellpadding="5">
                         <h:outputText value="Customer Id:"/>
