--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -20,16 +20,18 @@
             </ui:insert>
         </ui:define>
         <ui:define name="left">
-  <h:form id="formMain">
+              <h:form id="formMain">
                 <p:menu>
-                    <p:submenu label ="Map Settings">
-                        <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
-                        <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
-                        <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label =" Manage Your Transportation">
-                        <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
-                    </p:submenu>
+                    <c:if test="#{dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label ="Map Settings">
+                            <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
+                            <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
+                            <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
+                        </p:submenu>
+                        <p:submenu label =" Manage Your Transportation">
+                            <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
+                        </p:submenu>
+                    </c:if>                     
                     <c:if test="#{dashboardBean.checkTMSCanManageTransportationAsset() ||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Location" >
                             <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
@@ -64,14 +66,12 @@
                     <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()|| dashboardBean.checkTMSCanManageLog()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Transportation Order" >
                             <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()||dashboardBean.loginedUser.userType == 'superuser'}">
+                                <p:menuitem value="Run Cost Simulation" url="runestimation.xhtml" />
+                                <p:menuitem value="View Past Simulations" url="viewestimation.xhtml" />
                                 <p:menuitem value="Create Transportation Order" url="addnewtorder.xhtml" />
                                 <p:menuitem value="View All Orders" url="viewalltorder.xhtml" />
-                                <p:submenu label="Order Simulation" >
-                                    <p:menuitem value="Run Cost Simulation" url="runEstimation.xhtml" />
-                                    <p:menuitem value="View Past Simulation" url="viewEstimation.xhtml" />
-                                </p:submenu>
                             </c:if>
-                            <p:menuitem value="View Order Details" url="viewalllog.xhtml"/>
+                            <p:menuitem value="Track Order Information" url="viewalllog.xhtml"/>
                             <c:if test="#{dashboardBean.checkTMSCanManageLog()||dashboardBean.loginedUser.userType == 'superuser'}">
                                 <p:menuitem value="Create Log For Order" url="addnewlog.xhtml" />
                             </c:if>
@@ -86,7 +86,6 @@
                             <p:menuitem value="Fulfillment Check" url="transportationservicefulfillmentcheck.xhtml" />
                         </p:submenu>
                     </c:if>
-
                 </p:menu>
             </h:form>
         </ui:define>
@@ -128,19 +127,16 @@
                                  widgetVar="transportationAssetTable"
                                  emptyMessage="No Transportation Asset found"
                                  rowKey="#{tAsset.assetId}">
-
-                        <f:facet name="header">                    
+                
                             <p:outputPanel>
-                                <h:outputText value="Search tAsset fields:" />
-                                <p:inputText id="globalFilter" onkeyup="PF('transportationAssetTable').filter()" />
+                                <h:outputText value="Transportation Asset Schedule:" />
                             </p:outputPanel>
-                        </f:facet>
 
                         <p:ajax event="rowEdit" listener="#{TTassetViewEditManagedBean.onRowEdit}"/>
                         <p:ajax event="rowEditCancel" listener="#{TTassetViewEditManagedBean.onRowCancel}"/>                
 
 
-                        <p:column filterBy="#{tAsset.assetId}" filterMatchMode="exact" headerText="TAsset ID" >
+                        <p:column filterBy="#{tAsset.assetId}" filterMatchMode="exact" headerText="TAsset ID" style="width:100px">
                             <h:outputText value="#{tAsset.assetId}" />
                         </p:column>
 
@@ -183,7 +179,7 @@
                         </p:column>
 
 
-                        <p:column headerText = "Delete Transportation Asset">
+                        <p:column headerText = "Delete Transportation Asset" style="width:100px">
                             <p:commandButton action="#{TTassetViewEditManagedBean.deleteTAsset(tAsset)}" update="tAssetData" value="Delete">
                                 <p:confirm header="Confirm Arrival" message="Are you sure that you want to delete this Transportation Asset?" icon="ui-icon-alert" />
                             </p:commandButton> 
@@ -221,7 +217,7 @@
                                  emptyMessage="No Transportation Asset found"
                                  rowKey="#{fAsset.scheduleId}">
 
-                        <p:column filterBy="#{fAsset.transporationAssetassetId.assetId}" filterMatchMode="exact" headerText="TAsset ID" >
+                        <p:column filterBy="#{fAsset.transporationAssetassetId.assetId}" filterMatchMode="exact" headerText="TAsset ID" style="width:120px">
                             <h:outputText value="#{fAsset.transporationAssetassetId.assetId}" />
                         </p:column>
 
@@ -263,7 +259,7 @@
                                  rowKey="#{toAsset.scheduleId}">
 
 
-                        <p:column filterBy="#{toAsset.transporationAssetassetId.assetId}" filterMatchMode="exact" headerText="TAsset ID" >
+                        <p:column filterBy="#{toAsset.transporationAssetassetId.assetId}" filterMatchMode="exact" headerText="TAsset ID" style="width:120px">
                             <h:outputText value="#{toAsset.transporationAssetassetId.assetId}" />
                         </p:column>
 
