--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltorder.xhtml
@@ -20,16 +20,18 @@
             </ui:insert>
         </ui:define>
         <ui:define name="left">
- <h:form id="formMain">
+             <h:form id="formMain">
                 <p:menu>
-                    <p:submenu label ="Map Settings">
-                        <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
-                        <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
-                        <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
-                    </p:submenu>
-                    <p:submenu label =" Manage Your Transportation">
-                        <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
-                    </p:submenu>
+                    <c:if test="#{dashboardBean.loginedUser.userType == 'superuser'}">
+                        <p:submenu label ="Map Settings">
+                            <p:menuitem value="Add A Node" url="addnewnode.xhtml"/>
+                            <p:menuitem value="Add A Route" url="addnewroute.xhtml"/>
+                            <p:menuitem value="View Connections" url="viewconnection.xhtml"/>
+                        </p:submenu>
+                        <p:submenu label =" Manage Your Transportation">
+                            <p:menuitem value="TMS Home" url="tmsindex.xhtml"/>
+                        </p:submenu>
+                    </c:if>                     
                     <c:if test="#{dashboardBean.checkTMSCanManageTransportationAsset() ||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Location" >
                             <p:menuitem value="Add A Location" url="addnewlocation.xhtml"/>
@@ -64,14 +66,12 @@
                     <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()|| dashboardBean.checkTMSCanManageLog()||dashboardBean.loginedUser.userType == 'superuser'}">
                         <p:submenu label="Transportation Order" >
                             <c:if test="#{dashboardBean.checkTMSCanManageTransportationOrder()||dashboardBean.loginedUser.userType == 'superuser'}">
+                                <p:menuitem value="Run Cost Simulation" url="runestimation.xhtml" />
+                                <p:menuitem value="View Past Simulations" url="viewestimation.xhtml" />
                                 <p:menuitem value="Create Transportation Order" url="addnewtorder.xhtml" />
                                 <p:menuitem value="View All Orders" url="viewalltorder.xhtml" />
-                                <p:submenu label="Order Simulation" >
-                                    <p:menuitem value="Run Cost Simulation" url="runEstimation.xhtml" />
-                                    <p:menuitem value="View Past Simulation" url="viewEstimation.xhtml" />
-                                </p:submenu>
                             </c:if>
-                            <p:menuitem value="View Order Details" url="viewalllog.xhtml"/>
+                            <p:menuitem value="Track Order Information" url="viewalllog.xhtml"/>
                             <c:if test="#{dashboardBean.checkTMSCanManageLog()||dashboardBean.loginedUser.userType == 'superuser'}">
                                 <p:menuitem value="Create Log For Order" url="addnewlog.xhtml" />
                             </c:if>
@@ -86,7 +86,6 @@
                             <p:menuitem value="Fulfillment Check" url="transportationservicefulfillmentcheck.xhtml" />
                         </p:submenu>
                     </c:if>
-
                 </p:menu>
             </h:form>
         </ui:define>
@@ -104,38 +103,34 @@
                              rowKey="#{order.transportationOrderId}">
                     <f:facet name="header">                    
                         <p:outputPanel>
-                            <h:outputText value="Search all fields:" />
-                            <p:inputText id="globalFilter" onkeyup="PF('nodeTable').filter()" />
+                            <h:outputText value="View All Transportation Orders:" />
                         </p:outputPanel>
                     </f:facet>
                     <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="TransportationOrder ID" >
                         <h:outputText value="#{order.transportationOrderId}" />
                     </p:column>
-                    <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="Cargo Type" >
+                    <p:column headerText="Cargo Type" >
                         <h:outputText value="#{order.cargoType}" />
                     </p:column>
-                    <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="Cargo Weight" >
+                    <p:column headerText="Cargo Weight" >
                         <h:outputText value="#{order.cargoWeight}"/>
                     </p:column>
-                    <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="Origin" >
+                    <p:column  headerText="Origin" >
                         <h:outputText value="#{order.origin}" />
                     </p:column>
-                    <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="Destination" >
+                    <p:column  headerText="Destination" >
                         <h:outputText value="#{order.destination}" />
                     </p:column>
-                    <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="Shipping Date" >
+                    <p:column  headerText="Shipping Date" >
                         <h:outputText value="#{order.timeStart}" />
                     </p:column>
-                    <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="Expected Delivery Date" >
+                    <p:column  headerText="Expected Delivery Date" >
                         <h:outputText value="#{order.timeEnd}" />
                     </p:column>
-                    <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="Creator" >
+                    <p:column  headerText="Creator" >
                         <h:outputText value="#{order.creatorId}" />
                     </p:column>
-                    <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="Document Type" >
-                        <h:outputText value="#{order.referenceType}" />
-                    </p:column>
-                    <p:column filterBy="#{order.transportationOrderId}" filterMatchMode="exact" headerText="Doucment No." >
+                    <p:column  headerText="Doucment No." >
                         <h:outputText value="#{order.referenceId}" />
                     </p:column>
 
