--- a/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/warehouseservicefulfillmentcheck.xhtml
@@ -25,7 +25,7 @@
         <ui:define name="left">
             <p:menu styleClass="menu-width">
                 <p:submenu label =" WMS HOME" styleClass="display:block">
-                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender" />
+                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
                 </p:submenu>
                 <p:submenu label =" Warehouse" styleClass="display:block">
                     <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
@@ -54,7 +54,7 @@
                 <c:if test="#{dashboardBean.checkWMSCanManageStockTransportOrder()||dashboardBean.checkWMSCanManageOrderFulfillment()||dashboardBean.checkWMSCanManageReceivingGoods()||dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Stock Transport Order" styleClass="display:block" >
                         <p:menuitem value="Create Transport Order" url="createtransportorder.xhtml"/>
-                        <p:menuitem value="View Transport Order To Be Processed" url="viewsourcetransportorder.xhtml"/>
+                        <p:menuitem value="Process Transport Order" url="viewsourcetransportorder.xhtml"/>
                         <p:menuitem value="All Incoming Transport Orders" url="viewdesttransportorder.xhtml"/>
                     </p:submenu>
                 </c:if>
@@ -81,7 +81,7 @@
                 </c:if>
                 <c:if test="#{dashboardBean.checkWMSManageWarehouse() ||dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Warehouse Space Fulfillment Check" >
-                        <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" />
+                        <p:menuitem value="Fulfillment Check" url="warehouseservicefulfillmentcheck.xhtml" style="background:#aa5050; color:white" />
                     </p:submenu>
                 </c:if>
                 <c:if test="#{dashboardBean.checkWMSCanManageReceivingGoods()||dashboardBean.loginedUser.userType == 'superuser'}">
