--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
@@ -23,7 +23,7 @@
         <ui:define name="left">
             <p:menu styleClass="menu-width">
                 <p:submenu label =" WMS HOME" styleClass="display:block">
-                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender" />
+                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" />
                 </p:submenu>
                 <p:submenu label =" Warehouse" styleClass="display:block">
                     <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
@@ -39,7 +39,7 @@
                 </p:submenu>
                 <p:submenu label="Stock" styleClass="display:block" >
                     <p:menuitem value="Add Stock" url="addstock.xhtml"/>
-                    <p:menuitem value="View Stock" url="viewstock.xhtml"/>
+                    <p:menuitem value="View Stock" url="viewstock.xhtml" style="background:#aa5050; color:white" />
                 </p:submenu>
 
                 <c:if test="#{dashboardBean.checkWMSCanManageStockAuditProcess() ||dashboardBean.loginedUser.userType == 'superuser'}">
@@ -52,7 +52,7 @@
                 <c:if test="#{dashboardBean.checkWMSCanManageStockTransportOrder()||dashboardBean.checkWMSCanManageOrderFulfillment()||dashboardBean.checkWMSCanManageReceivingGoods()||dashboardBean.loginedUser.userType == 'superuser'}">
                     <p:submenu label="Stock Transport Order" styleClass="display:block" >
                         <p:menuitem value="Create Transport Order" url="createtransportorder.xhtml"/>
-                        <p:menuitem value="View Transport Order To Be Processed" url="viewsourcetransportorder.xhtml"/>
+                        <p:menuitem value="Process Transport Order" url="viewsourcetransportorder.xhtml"/>
                         <p:menuitem value="All Incoming Transport Orders" url="viewdesttransportorder.xhtml"/>
                     </p:submenu>
                 </c:if>
