create key account- Manli

--- a/MerlionPortal/MerlionPortal-war/web/crms/createkeyaccount.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createkeyaccount.xhtml
@@ -76,7 +76,7 @@
         <ui:define name="right">
             <p:breadCrumb>
                 <p:menuitem value="CRMS Home" url="crmsindex.xhtml" />
-                <p:menuitem value="Create Service Contract" url="createservicecontract.xhtml" />
+                <p:menuitem value="Create Key Account" url="createkeyaccount.xhtml"  />
             </p:breadCrumb>
             <p:panel id="basic" header="Create Service Contract" style="margin-bottom:20px">
                 <h:form id="form">
